--- a/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7HO-aK-HSC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XMi-Xj-ZoO">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,9 +22,14 @@
                                 <rect key="frame" x="0.0" y="42" width="414" height="854"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="TJB-wX-Y1l">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="181" id="wS7-a2-YV6" customClass="MovieCell">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="181"/>
+                                        <rect key="frame" x="0.0" y="72" width="414" height="181"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wS7-a2-YV6" id="YSA-45-StO">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="180.5"/>
@@ -66,17 +71,104 @@
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="To6-lx-MvF"/>
                     <connections>
+                        <outlet property="searchBar" destination="TJB-wX-Y1l" id="R64-sH-BrY"/>
                         <outlet property="tableView" destination="MGq-Hi-Ie2" id="9MB-DS-TCT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="726" y="676"/>
+            <point key="canvasLocation" x="-262" y="2792"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Movies-->
+        <scene sceneID="Idp-Vr-BOf">
+            <objects>
+                <viewController id="HMO-ZX-hOn" customClass="MoviesGridViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="V9z-Ud-s93">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RR8-YD-Zaz">
+                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dih-Zg-JUo">
+                                <rect key="frame" x="0.0" y="132" width="414" height="727"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="4" minimumInteritemSpacing="0.0" id="Fz8-wI-E6N">
+                                    <size key="itemSize" width="158" height="225"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieCollectionCell" id="S8u-FI-KrS" customClass="MovieCollectionCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="158" height="225"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="158" height="225"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W4i-JR-BQn">
+                                                    <rect key="frame" x="0.0" y="0.0" width="158" height="225"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <connections>
+                                            <outlet property="posterView" destination="W4i-JR-BQn" id="fTA-dj-epk"/>
+                                            <segue destination="afJ-7S-ThW" kind="show" id="Srl-S7-1ws"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="BgR-UL-gYJ"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Movies" id="98h-dZ-H7Y"/>
+                    <connections>
+                        <outlet property="collectionView" destination="dih-Zg-JUo" id="zGm-96-3kc"/>
+                        <outlet property="gridSearchBar" destination="RR8-YD-Zaz" id="wrP-ej-ugi"/>
+                        <outlet property="searchDisplayController" destination="cdc-LR-PLz" id="Dcn-TY-C4m"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kuw-31-81x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="cdc-LR-PLz">
+                    <connections>
+                        <outlet property="delegate" destination="HMO-ZX-hOn" id="hvA-ay-axL"/>
+                        <outlet property="searchContentsController" destination="HMO-ZX-hOn" id="WYh-5Q-eSL"/>
+                        <outlet property="searchResultsDataSource" destination="HMO-ZX-hOn" id="raX-i6-XUG"/>
+                        <outlet property="searchResultsDelegate" destination="HMO-ZX-hOn" id="Wkq-nE-scq"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1055.072463768116" y="2791.7410714285711"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="QpA-05-H7A">
+            <objects>
+                <tabBarController id="XMi-Xj-ZoO" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iWt-4h-qgT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="7HO-aK-HSC" kind="relationship" relationship="viewControllers" id="r5L-nY-2Ti"/>
+                        <segue destination="ZsS-Oo-mw1" kind="relationship" relationship="viewControllers" id="caw-kC-Lbs"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MgY-ek-VH0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="419" y="1379"/>
+        </scene>
+        <!--Now Playing-->
         <scene sceneID="xUd-xn-hT3">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7HO-aK-HSC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Now Playing" image="now_playing_tabbar_item" id="Iny-Hm-moQ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qar-Wd-omF">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -89,7 +181,24 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gfO-NI-3YN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="42.028985507246382" y="676.33928571428567"/>
+            <point key="canvasLocation" x="-262" y="2116"/>
+        </scene>
+        <!--Flix-->
+        <scene sceneID="g7r-3n-edS">
+            <objects>
+                <navigationController title="Flix" id="ZsS-Oo-mw1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Superhero" image="superhero_tabbar_item" id="8hg-QZ-p5g"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2H8-ln-8ao">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="HMO-ZX-hOn" kind="relationship" relationship="rootViewController" id="9dM-U1-X2H"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pdy-AT-7mA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1057" y="2115"/>
         </scene>
         <!--Details View Controller-->
         <scene sceneID="Je0-Hv-WOV">
@@ -106,10 +215,12 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qit-Kq-880">
                                         <rect key="frame" x="0.0" y="-46" width="414" height="283"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <gestureRecognizers/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JJT-mv-6m9">
                                         <rect key="frame" x="27" y="172" width="122" height="182"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <gestureRecognizers/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VA0-2E-5Pe">
                                         <rect key="frame" x="27" y="381" width="359" height="39"/>
@@ -126,6 +237,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <gestureRecognizers/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -137,11 +249,57 @@
                         <outlet property="posterView" destination="JJT-mv-6m9" id="aYM-Mw-dQi"/>
                         <outlet property="synopsisLabel" destination="VA0-2E-5Pe" id="T8r-mG-nFk"/>
                         <outlet property="titleLabel" destination="ixJ-oA-Gqq" id="bey-pL-x5T"/>
+                        <segue destination="Azg-J0-dm9" kind="presentation" identifier="trailerSegue" id="MZA-NV-MTw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tex-Pm-ILJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1460.8695652173915" y="675"/>
+            <point key="canvasLocation" x="-262" y="3471"/>
+        </scene>
+        <!--Trailer View Controller-->
+        <scene sceneID="sm1-PH-id3">
+            <objects>
+                <viewController id="Azg-J0-dm9" customClass="TrailerViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bqq-j2-qmc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CRk-F7-Y1e">
+                                <rect key="frame" x="0.0" y="98" width="414" height="798"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lmi-Ag-PHd">
+                                <rect key="frame" x="20" y="54" width="61" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelTrailerView:" destination="Azg-J0-dm9" eventType="touchUpInside" id="gzT-1B-gwy"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="o7M-fK-zIp"/>
+                    </view>
+                    <connections>
+                        <outlet property="trailerWebView" destination="CRk-F7-Y1e" id="khp-fS-IcI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HEI-CG-9AY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="500.00000000000006" y="3477.4553571428569"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="now_playing_tabbar_item" width="21" height="21"/>
+        <image name="superhero_tabbar_item" width="21" height="23"/>
+    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="f3J-ne-EKu"/>
+    </inferredMetricsTieBreakers>
 </document>
