friday checkpoint - mostly done!

--- a/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Base.lproj/Main.storyboard
@@ -300,6 +300,6 @@
         <image name="superhero_tabbar_item" width="21" height="23"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="f3J-ne-EKu"/>
+        <segue reference="Srl-S7-1ws"/>
     </inferredMetricsTieBreakers>
 </document>
